content updated, new members added

--- a/content/news/21-Jan-2020.md
+++ b/content/news/21-Jan-2020.md
@@ -1,5 +1,5 @@
 ---
-title: "21 Jan 2020"
+title: "21 Jan 2020 - Paper on Machine learning published"
 date: 2020-05-05T22:25:52-04:00
 draft: false
 image: "images/publications/2020-Machine-Learning.png"
