minor content change

--- a/content/news/20210408_DMD_paper.md
+++ b/content/news/20210408_DMD_paper.md
@@ -5,6 +5,6 @@ draft: false
 image: "images/publications/2021-Shih-DMD.png"
 ---
 
-Our paper on ultra-precise holographic optical addressing of ions is [published](https://www.nature.com/articles/s41534-021-00396-0) in the *Nature* group journal *npj Quantum Information*! This is an experimental research. 
+Our paper on ultra-precise holographic optical addressing of ions is [published](https://www.nature.com/articles/s41534-021-00396-0) in *npj Quantum Information*! This is an experimental research. 
 
 {{< publist 2021-Shih-DMD-paper.md>}}
